# llms-bias-frameaxis

./: pyproject.toml
chilean-news/: bias_intensity_tables.ipynb  cos_sim_euclidean_calc.ipynb  top_microframes.ipynb
chilean-news/axes/: antonimos-adjetivos-wordnet-espanol.tsv  antonimos_combinados.tsv
examples/: 1_Build big table.ipynb  3_Significant axes.ipynb  4_Draw side-by-side plot.ipynb
examples/average/: effect_size_significant_axes_ambience_negative.tsv  effect_size_significant_axes_ambience_positive.tsv  effect_size_significant_axes_anecdotes-miscellaneous_negative.tsv  effect_size_significant_axes_anecdotes-miscellaneous_positive.tsv  effect_size_significant_axes_food_negative.tsv  effect_size_significant_axes_food_positive.tsv  effect_size_significant_axes_price_negative.tsv  effect_size_significant_axes_price_positive.tsv  effect_size_significant_axes_service_negative.tsv  effect_size_significant_axes_service_positive.tsv  significant_axes_ambience_negative.tsv  significant_axes_ambience_positive.tsv  significant_axes_anecdotes-miscellaneous_negative.tsv  significant_axes_anecdotes-miscellaneous_positive.tsv  significant_axes_food_negative.tsv  significant_axes_food_positive.tsv  significant_axes_price_negative.tsv  significant_axes_price_positive.tsv  significant_axes_service_negative.tsv  significant_axes_service_positive.tsv
examples/second_moment/: effect_size_significant_axes_ambience_negative.tsv  effect_size_significant_axes_ambience_positive.tsv  effect_size_significant_axes_anecdotes-miscellaneous_negative.tsv  (+17 more)
frameaxis/: core.py  semaxis.py
