[tool.poetry]
name = "frameaxis"
version = "0.1.0"
description = ""
authors = ["Kwak Haewoon <haewoon@acm.org>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow= "^2.3.1"
matplotlib = "3.5.0"
gensim = "4.1.2"
nltk = "3.6.5"
scikit-learn = "1.0.1"
adjusttext = "0.7.3"
spacy = "3.0.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
